# vp-data-scraper

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
legacy-code/: __init__.py  (+5 more)
planning_scraper/: .env.example  pyproject.toml  scrapy.cfg
planning_scraper/logs/runs/: run_20251201_192831.json  run_20251201_193310.json  run_20251201_194536.json  run_20251201_200017.json  run_20251201_201340.json  run_20251206_182915.json  run_20251206_182922.json  run_20251206_183024.json  run_20251206_183302.json  run_20251206_183717.json  run_20251206_183953.json  run_20260118_161221.json  run_20260118_161357.json  run_20260118_161411.json  run_20260118_161629.json  run_20260118_161915.json  run_20260118_162132.json  run_20260118_162209.json  run_20260118_162249.json  run_20260118_162322.json  run_20260118_162351.json  run_20260118_162454.json  run_20260118_162538.json  run_20260118_162627.json  run_20260118_170950.json  run_20260118_171636.json  run_20260118_173958.json  run_20260118_180258.json  run_20260118_180408.json  run_20260118_180550.json  run_20260118_183006.json  run_20260118_183034.json  run_20260118_183221.json  run_20260118_183229.json  run_20260118_184108.json  run_20260118_184121.json  run_20260118_184139.json  run_20260118_184242.json  run_20260118_185257.json  run_20260118_185429.json  (+14 more)
planning_scraper/planning_scraper/: __init__.py  settings.py
planning_scraper/planning_scraper/config/: __init__.py  patterns.py  portals.py
planning_scraper/scripts/: discover_atlas_api.py  discover_atlas_api_v2.py  discover_atlas_documents.py  test_atlas_page.py
(+115 files in other folders)
