[project]
name = "planning-scraper"
version = "0.1.0"
description = "Scrapy application to scrape UK planning portals and download planning drawings/plans PDFs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VP Data Scraper Team"}
]

dependencies = [
    "scrapy>=2.11",
    "scrapy-impersonate>=1.4.0",
    "boto3>=1.34",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "itemloaders>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25",
    "black>=24.0",
    "ruff>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["planning_scraper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
